--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
                     <li><a href="About.html">About</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
+                    <li><a href="Blogs.html">Blog</a></li>
                     <li><a href="Contact.html">Contact</a></li>
 
                    </ul>
